Change maven compiler plugin